[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/environment/particles_sheet.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters/enemies/Shot.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/projectile_hit.wav" type="AudioStream" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.133152, 0.13587, 0.478261, 0.480978, 0.758152, 0.76087 )
colors = PoolColorArray( 0.764819, 0.724434, 0.91448, 1, 0.611765, 0.545098, 0.858824, 1, 0.611765, 0.545098, 0.858824, 1, 0.470588, 0.392157, 0.776471, 1, 0.470588, 0.392157, 0.776471, 1, 0.286275, 0.254902, 0.509804, 1 )

[sub_resource type="CircleShape2D" id=3]
radius = 2.0

[node name="Shot" type="CPUParticles2D"]
material = SubResource( 1 )
amount = 64
lifetime = 0.4
lifetime_randomness = 0.6
local_coords = false
draw_order = 1
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 1.0
spread = 0.0
gravity = Vector2( 0, 0 )
color_ramp = SubResource( 2 )
anim_speed = 1.0
anim_speed_random = 0.2
script = ExtResource( 2 )

[node name="KillTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="FinishTimer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[node name="ProjectileHitSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="FinishTimer" to="." method="queue_free" flags=6]
